buffer redisign, now its a template

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,8 +3,9 @@ project(file_read)
 
 set(CMAKE_CXX_STANDARD 23)
 
-add_library(file_read STATIC
+add_library(file_read INTERFACE
         src/file_deserialising.h
-        src/buffer.cpp
         src/buffer.h
         src/file_read.h)
+
+set_target_properties(file_read PROPERTIES LINKER_LANGUAGE CXX)
